--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "liquidjs": "^10.0.0"
   },
   "devDependencies": {
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^30.0.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.3",
